HTTRroute/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /details
      backendRefs:
        - name: details
          port: 9080
    - matches:
        - headers:
            - type: Exact
              name: magic
              value: foo
          queryParams:
            - type: Exact
              name: great
              value: example
          path:
            type: PathPrefix
            value: /
          method: GET
      backendRefs:
        - name: productpage
          port: 9080
